# agentic_ai

./: .gitignore  README.md  exp.py  t3.py  ytdl.py
AI agent/: Lesson1.ipynb  Lesson2.ipynb  Lesson4.ipynb  lesson3.ipynb  test1.ipynb
MCP/: demo.py
MCP/csv_sanity_checker/: chat_memory.py  file_functions.py  main.py  pyproject.toml  sever.py  test_1.py  test_2.ipynb  test_3.ipynb  test_v1.ipynb
MCP/dry_run/: main.py  pyproject.toml  server.py
basic/: t1.py  t2.py
chat_bot/: main.py
crewai/exp/: README.md  pyproject.toml
crewai/exp/src/exp/: crew.py  main.py
crewai/exp_2/: main.ipynb
feedback_agent/: main.ipynb
langgraph/: agent1.py  l2.ipynb  l3.ipynb  l4.ipynb  test1.ipynb  test2.ipynb  test3.ipynb
langgraph/AI agent/: Lesson1.ipynb  test1.ipynb
langgraph/Document_Summerization/: data_manipulator.py  exp.ipynb
langgraph/Stock_analyst/: exp.ipynb  main.ipynb
langgraph/feedback_agent/: main.ipynb
langgraph/scheduling_agent/: main.ipynb
scheduling_agent/: events.txt  exp file.ipynb  main.ipynb
